[tool.poetry]
name = "sloth-ci-ext-logs"
version = "1.1.3"
description = "File logging for Sloth CI"
authors = ["Constantine Molchanov <moigagoo@live.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sloth_ci_ext_logs.py"}]

[tool.poetry.dependencies]
python = "^3.9"
sloth-ci = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
